syntax = "proto3";

package permissions;

service PermissionService {
    rpc CreatePermission(CreatePermissionRequest) returns (CreatePermissionResponse) {}
    rpc PermissionDetails(PermissionDetailsRequest) returns (PermissionDetailsResponse) {}
}

message CreatePermissionRequest {
    string name = 1;
    string description = 2;
    repeated string permissions = 3;
}

message CreatePermissionResponse {
    int32 status = 1;
    repeated string error = 2; 
    string id = 3;
}

message PermissionDetailsRequest {
    string id = 1;
}

message PermissionDetailsResponse {
    int32 status = 1;
    repeated string error = 2; 
    string id = 3;
    string name = 4;
    string description = 5;
    string createdAt = 6;
    repeated string permissions = 7;
}